[gd_scene load_steps=11 format=3 uid="uid://d0ga2i065m5kf"]

[ext_resource type="Material" uid="uid://do36kvrgmr67n" path="res://assets/shader/material/glitch.tres" id="2"]
[ext_resource type="PackedScene" path="res://src/level/ParallaxBackground.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://d0oqtaecqolpe" path="res://src/player/Player.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://c7l46tq8d0ixg" path="res://src/randomgenerator/random_genrator.tscn" id="7_d7tao"]
[ext_resource type="PackedScene" path="res://src/screen/GUI.tscn" id="9"]
[ext_resource type="Script" path="res://src/level/tutorial.gd" id="19"]
[ext_resource type="PackedScene" path="res://src/screen/TutorialScreen.tscn" id="20"]

[sub_resource type="Animation" id="1"]
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ParallaxBackground/ParallaxLayer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RandomGenerator")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"generate"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Glitch:material:shader_param/apply")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_state_changed"
}]
}

[sub_resource type="Animation" id="2"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glitch:material:shader_param/apply")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3s6lb"]
_data = {
"ENTER": SubResource("1"),
"glitch": SubResource("2")
}

[node name="Level" type="Node2D"]
script = ExtResource("19")

[node name="ParallaxBackground" parent="." instance=ExtResource("3")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="GUI" parent="CanvasLayer" instance=ExtResource("9")]
layout_mode = 3
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="TutorialScreen" parent="CanvasLayer" instance=ExtResource("20")]
visible = false
anchors_preset = 15

[node name="Player" parent="." instance=ExtResource("5")]
position = Vector2(360, 320)

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-72, 960)
collide_with_areas = true

[node name="Glitch" type="ColorRect" parent="."]
material = ExtResource("2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
limit_left = 0
limit_top = 0
limit_right = 720
limit_bottom = 1280

[node name="MultiplierTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3s6lb")
}
autoplay = "ENTER"

[node name="RandomGenrator" parent="." instance=ExtResource("7_d7tao")]
position = Vector2(390, 996)
